# durak

./: .gitignore
client/: CMakeLists.txt  chat_message.hpp  main.cpp
server/: CMakeLists.txt  chat_message.hpp  main.cpp
